--- a/arch/arm/hotplug/Kconfig
+++ b/arch/arm/hotplug/Kconfig
@@ -61,3 +61,9 @@ config ASMP
 	help
 	  Automatically hotplugs the multiple cpu cores on and off
 	  based on cpu load and suspend state
+
+config MSM_SLEEPER
+	bool "CPU hotplug driver"
+	default y
+	help
+	  CPU hotplug driver
