--- a/arch/arm/hotplug/Makefile
+++ b/arch/arm/hotplug/Makefile
@@ -1,1 +1,1 @@
-obj-y	:= intelli_plug.o alucard_hotplug.o msm_hotplug.o msm_zen_decision.o bricked_hotplug.o autosmp.o
+obj-y	:= intelli_plug.o alucard_hotplug.o msm_hotplug.o msm_zen_decision.o bricked_hotplug.o autosmp.o msm-sleeper.o
