--- a/arch/arm/configs/cyanogenmod_d855_defconfig
+++ b/arch/arm/configs/cyanogenmod_d855_defconfig
@@ -3850,5 +3850,11 @@ CONFIG_CPU_FREQ_GOV_LIONHEART=y
 CONFIG_CPU_FREQ_GOV_SLIM=y
 CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_LCD_NOTIFIER=y
+CONFIG_TCP_CONG_WESTWOOD=y
+CONFIG_TCP_CONG_VENO=y
+CONFIG_TCP_CONG_YEAH=y
+CONFIG_TCP_CONG_VEGAS=y
+CONFIG_TCP_CONG_HTCP=y
+CONFIG_TCP_CONG_BIC=y
 
 
