Add SmartassV2 and Smartmax Governor

--- a/arch/arm/configs/cyanogenmod_d855_defconfig
+++ b/arch/arm/configs/cyanogenmod_d855_defconfig
@@ -3848,6 +3848,9 @@ CONFIG_CPU_FREQ_GOV_NIGHTMARE=y
 CONFIG_CPU_FREQ_GOV_INTELLIMM=y
 CONFIG_CPU_FREQ_GOV_LIONHEART=y
 CONFIG_CPU_FREQ_GOV_SLIM=y
+CONFIG_CPU_FREQ_GOV_SMARTMAX_G3=y
+CONFIG_CPU_FREQ_GOV_SMARTASSV2=y
+
 CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_LCD_NOTIFIER=y
 CONFIG_TCP_CONG_WESTWOOD=y
