--- a/arch/arm/configs/cyanogenmod_d855_defconfig
+++ b/arch/arm/configs/cyanogenmod_d855_defconfig
@@ -3859,6 +3859,8 @@ CONFIG_TCP_CONG_YEAH=y
 CONFIG_TCP_CONG_VEGAS=y
 CONFIG_TCP_CONG_HTCP=y
 CONFIG_TCP_CONG_BIC=y
+CONFIG_TOUCHSCREEN_SWEEP2WAKE=y
+
 
 
 ####Merge not if other variants
