--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -1097,6 +1097,18 @@ if TOUCHSCREEN_SYNAPTICS_G3
 
 source "drivers/input/touchscreen/g3/Kconfig"
 
+config TOUCHSCREEN_SWEEP2WAKE
+        tristate "Sweep2Wake for touchscreens"
+        select TOUCHSCREEN_PREVENT_SLEEP
+        default n
+
+config TOUCHSCREEN_PREVENT_SLEEP
+        bool "Inihibit sleep on modified touchscreen drivers"
+        default n
+        help
+          This disables the sleep function of modified touchscreen drivers.
+
+
 endif
 
 config TOUCHSCREEN_SYNAPTICS_G2
