cpufreq: Add wheatley governor

--- a/arch/arm/configs/cyanogenmod_d855_defconfig
+++ b/arch/arm/configs/cyanogenmod_d855_defconfig
@@ -3850,6 +3850,7 @@ CONFIG_CPU_FREQ_GOV_LIONHEART=y
 CONFIG_CPU_FREQ_GOV_SLIM=y
 CONFIG_CPU_FREQ_GOV_SMARTMAX_G3=y
 CONFIG_CPU_FREQ_GOV_SMARTASSV2=y
+CONFIG_CPU_FREQ_GOV_WHEATLEY=y
 
 CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_LCD_NOTIFIER=y
