--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -162,6 +162,12 @@ config CPU_FREQ_DEFAULT_GOV_SMARTMAX
 	help
 	  Use the CPUFreq governor 'smartmax' as default
 
+config CPU_FREQ_DEFAULT_GOV_WHEATLEY
+	bool "wheatley"
+	select CPU_FREQ_GOV_WHEATLEY
+	select CPU_FREQ_GOV_PERFORMANCE
+	---help---
+	  Use the CPUFreq governor 'wheatley' as default.
 
 endchoice
 
@@ -435,6 +441,10 @@ config CPU_FREQ_GOV_SMARTMAX_FIND5
 config CPU_FREQ_GOV_SMARTMAX_G3
 	bool "'smartmax' defaults for g3"
 	depends on CPU_FREQ_GOV_SMARTMAX
+	  
+config CPU_FREQ_GOV_WHEATLEY
+	tristate "'wheatley' cpufreq governor"
+	depends on CPU_FREQ	
             
 
 
