--- a/arch/arm/configs/cyanogenmod_d852_defconfig
+++ b/arch/arm/configs/cyanogenmod_d852_defconfig
@@ -42,7 +42,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-CM"
+CONFIG_LOCALVERSION="-FechdaKernel"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -3850,3 +3850,26 @@ CONFIG_NLATTR=y
 # CONFIG_AVERAGE is not set
 # CONFIG_CORDIC is not set
 CONFIG_QMI_ENCDEC=y
+
+#### Mine
+CONFIG_INTELLI_PLUG=y
+CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
+CONFIG_CPU_FREQ_GOV_PEGASUSQ=y
+CONFIG_CPU_FREQ_GOV_NIGHTMARE=y
+CONFIG_CPU_FREQ_GOV_INTELLIMM=y
+CONFIG_CPU_FREQ_GOV_LIONHEART=y
+CONFIG_CPU_FREQ_GOV_SLIM=y
+CONFIG_CPU_FREQ_GOV_SMARTMAX_G3=y
+CONFIG_CPU_FREQ_GOV_SMARTASSV2=y
+CONFIG_CPU_FREQ_GOV_WHEATLEY=y
+
+CONFIG_CPU_VOLTAGE_TABLE=y
+CONFIG_LCD_NOTIFIER=y
+CONFIG_TCP_CONG_WESTWOOD=y
+CONFIG_TCP_CONG_VENO=y
+CONFIG_TCP_CONG_YEAH=y
+CONFIG_TCP_CONG_VEGAS=y
+CONFIG_TCP_CONG_HTCP=y
+CONFIG_TCP_CONG_BIC=y
+CONFIG_TOUCHSCREEN_SWEEP2WAKE=y
+
