added MultiRom Support for G3 @Skin1989

--- a/arch/arm/configs/cyanogenmod_d852_defconfig
+++ b/arch/arm/configs/cyanogenmod_d852_defconfig
@@ -3862,6 +3862,7 @@ CONFIG_CPU_FREQ_GOV_SLIM=y
 CONFIG_CPU_FREQ_GOV_SMARTMAX_G3=y
 CONFIG_CPU_FREQ_GOV_SMARTASSV2=y
 CONFIG_CPU_FREQ_GOV_WHEATLEY=y
+CONFIG_CPU_FREQ_GOV_HYPER=y
 
 CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_LCD_NOTIFIER=y
@@ -3872,4 +3873,12 @@ CONFIG_TCP_CONG_VEGAS=y
 CONFIG_TCP_CONG_HTCP=y
 CONFIG_TCP_CONG_BIC=y
 CONFIG_TOUCHSCREEN_SWEEP2WAKE=y
+
++# MultiROM Support
++CONFIG_KEXEC=y
++CONFIG_KEXEC_HARDBOOT=y
++CONFIG_IKCONFIG=y
++CONFIG_IKCONFIG_PROC=y
++CONFIG_ATAGS_PROC=n
++CONFIG_PROC_DEVICETREE=y
 
