more gpu optimizations

--- a/arch/arm/configs/cyanogenmod_d855_defconfig
+++ b/arch/arm/configs/cyanogenmod_d855_defconfig
@@ -3864,12 +3864,12 @@ CONFIG_TCP_CONG_BIC=y
 CONFIG_TOUCHSCREEN_SWEEP2WAKE=y
 
 # MultiROM Support
-CONFIG_KEXEC=y
-CONFIG_KEXEC_HARDBOOT=y
-CONFIG_IKCONFIG=y
-CONFIG_IKCONFIG_PROC=y
-CONFIG_ATAGS_PROC=n
-CONFIG_PROC_DEVICETREE=y
+# CONFIG_KEXEC=y
+# CONFIG_KEXEC_HARDBOOT=y
+# CONFIG_IKCONFIG=y
+# CONFIG_IKCONFIG_PROC=y
+# CONFIG_ATAGS_PROC=n
+# CONFIG_PROC_DEVICETREE=y
 
 
 
