add Impulse Governor

--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -175,6 +175,13 @@ config CPU_FREQ_DEFAULT_GOV_HYPER
 	---help---
 	  Use the CPUFreq governor 'HYPER' as default.
 
+config CPU_FREQ_DEFAULT_GOV_IMPULSE
+	bool "impulse"
+	select CPU_FREQ_GOV_IMPULSE
+	help
+	  Use the CPUFreq governor 'impulse' as default.
+
+
 
 endchoice
 
@@ -458,6 +465,14 @@ config CPU_FREQ_GOV_HYPER
 	depends on CPU_FREQ
 	---help---
 	  'HYPER' - a tweaked "ondemand" based smart and smooth optimized governor!
+
+config CPU_FREQ_GOV_IMPULSE
+	tristate "'impulse' cpufreq policy governor"
+	help
+	  'impulse' - This driver adds a dynamic cpufreq policy governor
+	  designed for optimized balance between power and performance.
+
+	  If in doubt, say N.
 
             
 
