--- a/arch/arm/configs/cyanogenmod_d855_defconfig
+++ b/arch/arm/configs/cyanogenmod_d855_defconfig
@@ -3852,6 +3852,7 @@ CONFIG_CPU_FREQ_GOV_SMARTMAX_G3=y
 CONFIG_CPU_FREQ_GOV_SMARTASSV2=y
 CONFIG_CPU_FREQ_GOV_WHEATLEY=y
 CONFIG_CPU_FREQ_GOV_HYPER=y
+CONFIG_CPU_FREQ_GOV_IMPULSE=y
 
 CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_LCD_NOTIFIER=y
