--- a/arch/arm/configs/cyanogenmod_d855_defconfig
+++ b/arch/arm/configs/cyanogenmod_d855_defconfig
@@ -3865,6 +3865,7 @@ CONFIG_TCP_CONG_BIC=y
 CONFIG_TOUCHSCREEN_SWEEP2WAKE=y
 CONFIG_ADRENO_IDLER=y
 CONFIG_POWERSUSPEND=y
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 
 # MultiROM Support
 # CONFIG_KEXEC=y
