--- a/arch/arm/configs/cyanogenmod_d855_defconfig
+++ b/arch/arm/configs/cyanogenmod_d855_defconfig
@@ -3853,6 +3853,8 @@ CONFIG_CPU_FREQ_GOV_SMARTASSV2=y
 CONFIG_CPU_FREQ_GOV_WHEATLEY=y
 CONFIG_CPU_FREQ_GOV_HYPER=y
 CONFIG_CPU_FREQ_GOV_IMPULSE=y
+CONFIG_CPU_FREQ_GOV_ADAPTIVE=y
+CONFIG_CPU_FREQ_GOV_WAVE=y
 
 CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_LCD_NOTIFIER=y
