added bioshock and blu_active governor and updated defconfigs

--- a/arch/arm/configs/cyanogenmod_d852_defconfig
+++ b/arch/arm/configs/cyanogenmod_d852_defconfig
@@ -3863,8 +3863,11 @@ CONFIG_CPU_FREQ_GOV_SMARTMAX_G3=y
 CONFIG_CPU_FREQ_GOV_SMARTASSV2=y
 CONFIG_CPU_FREQ_GOV_WHEATLEY=y
 CONFIG_CPU_FREQ_GOV_HYPER=y
-CONFIG_ADRENO_IDLER=y
-CONFIG_POWERSUSPEND=y
+CONFIG_CPU_FREQ_GOV_IMPULSE=y
+CONFIG_CPU_FREQ_GOV_ADAPTIVE=y
+CONFIG_CPU_FREQ_GOV_WAVE=y
+CONFIG_CPU_FREQ_GOV_BIOSHOCK=y
+CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 
 CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_LCD_NOTIFIER=y
@@ -3875,6 +3878,10 @@ CONFIG_TCP_CONG_VEGAS=y
 CONFIG_TCP_CONG_HTCP=y
 CONFIG_TCP_CONG_BIC=y
 CONFIG_TOUCHSCREEN_SWEEP2WAKE=y
+CONFIG_ADRENO_IDLER=y
+CONFIG_POWERSUSPEND=y
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
+# CONFIG_EXFAT_FS is not set
 
 +# MultiROM Support
 +CONFIG_KEXEC=y
