--- a/arch/arm/configs/cyanogenmod_d855_defconfig
+++ b/arch/arm/configs/cyanogenmod_d855_defconfig
@@ -3855,6 +3855,8 @@ CONFIG_CPU_FREQ_GOV_HYPER=y
 CONFIG_CPU_FREQ_GOV_IMPULSE=y
 CONFIG_CPU_FREQ_GOV_ADAPTIVE=y
 CONFIG_CPU_FREQ_GOV_WAVE=y
+CONFIG_CPU_FREQ_GOV_BIOSHOCK=y
+CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 
 CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_LCD_NOTIFIER=y
@@ -3868,6 +3870,7 @@ CONFIG_TOUCHSCREEN_SWEEP2WAKE=y
 CONFIG_ADRENO_IDLER=y
 CONFIG_POWERSUSPEND=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
+# CONFIG_EXFAT_FS is not set
 
 # MultiROM Support
 # CONFIG_KEXEC=y
