--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -205,6 +205,14 @@ config CPU_FREQ_DEFAULT_GOV_BLU_ACTIVE
 	select CPU_FREQ_GOV_BLU_ACTIVE
 	help
 
+config CPU_FREQ_DEFAULT_GOV_ELEMENTALX
+	bool "elementalx"
+	select CPU_FREQ_GOV_ELEMENTALX
+	select CPU_FREQ_GOV_PERFORMANCE
+	help
+	  Use the CPUFreq governor 'elementalx' as default.
+
+
 
 
 endchoice
@@ -514,6 +522,19 @@ config CPU_FREQ_GOV_WAVE
 config CPU_FREQ_GOV_BLU_ACTIVE
 	tristate "'blu_active' cpufreq governor"
 	depends on CPU_FREQ
+
+config CPU_FREQ_GOV_ELEMENTALX
+	tristate "'elementalx' cpufreq policy governor"
+	select CPU_FREQ_TABLE
+	help
+	  'elementalx' - This driver adds a dynamic cpufreq policy governor.
+
+	  To compile this driver as a module, choose M here: the
+	  module will be called cpufreq_elementalx.
+
+	  For details, take a look at linux/Documentation/cpu-freq.
+
+	  If in doubt, say N.
 
 
 
