--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -1108,6 +1108,10 @@ config TOUCHSCREEN_PREVENT_SLEEP
         help
           This disables the sleep function of modified touchscreen drivers.
 
+config STATE_NOTIFIER
+        bool "State Notifier"
+	default y
+
 
 endif
 
