--- a/arch/arm/configs/cyanogenmod_d855_defconfig
+++ b/arch/arm/configs/cyanogenmod_d855_defconfig
@@ -3873,6 +3873,7 @@ CONFIG_ADRENO_IDLER=y
 CONFIG_POWERSUSPEND=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 # CONFIG_EXFAT_FS is not set
+CONFIG_STATE_NOTIFIER=y
 
 # MultiROM Support
 # CONFIG_KEXEC=y
