--- a/arch/arm/configs/cyanogenmod_d855_defconfig
+++ b/arch/arm/configs/cyanogenmod_d855_defconfig
@@ -3876,12 +3876,12 @@ CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_STATE_NOTIFIER=y
 
 # MultiROM Support
-# CONFIG_KEXEC=y
-# CONFIG_KEXEC_HARDBOOT=y
-# CONFIG_IKCONFIG=y
-# CONFIG_IKCONFIG_PROC=y
-# CONFIG_ATAGS_PROC=n
-# CONFIG_PROC_DEVICETREE=y
+CONFIG_KEXEC=y
+CONFIG_KEXEC_HARDBOOT=y
+CONFIG_IKCONFIG=y
+CONFIG_IKCONFIG_PROC=y
+CONFIG_ATAGS_PROC=n
+CONFIG_PROC_DEVICETREE=y
 
 
 
