--- a/arch/arm/configs/cyanogenmod_d850_defconfig
+++ b/arch/arm/configs/cyanogenmod_d850_defconfig
@@ -42,7 +42,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-FechdaKernel"
+CONFIG_LOCALVERSION="-FechdaKernel_R7"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -3864,6 +3864,8 @@ CONFIG_CPU_FREQ_GOV_ADAPTIVE=y
 CONFIG_CPU_FREQ_GOV_WAVE=y
 CONFIG_CPU_FREQ_GOV_BIOSHOCK=y
 CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
+CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
+CONFIG_BRICKED_HOTPLUG=y
 
 CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_LCD_NOTIFIER=y
@@ -3878,11 +3880,15 @@ CONFIG_ADRENO_IDLER=y
 CONFIG_POWERSUSPEND=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 # CONFIG_EXFAT_FS is not set
+CONFIG_STATE_NOTIFIER=y
 
-+# MultiROM Support
-+CONFIG_KEXEC=y
-+CONFIG_KEXEC_HARDBOOT=y
-+CONFIG_IKCONFIG=y
-+CONFIG_IKCONFIG_PROC=y
-+CONFIG_ATAGS_PROC=n
-+CONFIG_PROC_DEVICETREE=y
+# MultiROM Support
+CONFIG_KEXEC=y
+CONFIG_KEXEC_HARDBOOT=y
+CONFIG_IKCONFIG=y
+CONFIG_IKCONFIG_PROC=y
+CONFIG_ATAGS_PROC=n
+CONFIG_PROC_DEVICETREE=y
+
+
+
