disable Bricked_Hotplug as default

--- a/arch/arm/hotplug/Kconfig
+++ b/arch/arm/hotplug/Kconfig
@@ -49,7 +49,7 @@ config ZEN_DECISION
 config BRICKED_HOTPLUG
 	bool "Enable kernel based mpdecision"
 	depends on MSM_RUN_QUEUE_STATS
-	default y
+	default n
 	help
 	 This enables kernel based multi core control.
 	 (up/down hotplug based on load)
