--- a/arch/arm/hotplug/Makefile
+++ b/arch/arm/hotplug/Makefile
@@ -1,2 +1,2 @@
-obj-y	:= intelli_plug.o alucard_hotplug.o msm_hotplug.o msm_zen_decision.o bricked_hotplug.o
+obj-y	:= intelli_plug.o alucard_hotplug.o msm_hotplug.o msm_zen_decision.o bricked_hotplug.o autosmp.o
 
