--- a/arch/arm/configs/cyanogenmod_d855_defconfig
+++ b/arch/arm/configs/cyanogenmod_d855_defconfig
@@ -3875,6 +3875,7 @@ CONFIG_POWERSUSPEND=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 # CONFIG_EXFAT_FS is not set
 CONFIG_STATE_NOTIFIER=y
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 
 # MultiROM Support
 CONFIG_KEXEC=y
